2005-06-13 Mikhail Khodjaiants
	Temporary fix for bug 77279: The memory view address should not be cleared on project restart.
	* ICDTLaunchConfigurationConstants.java
	* CMemoryBlockRetrievalExtension.java
	* InternalDebugCoreMessages.properties
	* CDebugTarget.java

2005-06-12 Mikhail Khodjaiants
	Temporary fix for bug 79872: Make instruction stepping default in disassembly view.
	* ICDebugConstants.java
	* CDebugCorePreferenceInitializer.java
	* CDebugTarget.java

2005-06-09 Mikhail Khodjaiants
	Bug 94139: User-defined register groups.
	Don't save the list of registers for default groups.
	* CRegisterManager.java

2005-06-09 Mikhail Khodjaiants
	Bug 94139: User-defined register groups.
	Support fo the "Restore Default Register Groups" action.
	* ICDebugTarget.java
	* CRegisterManager.java
	* CDebugTarget.java

2005-06-07 Mikhail Khodjaiants
	Bug 94139: User-defined register groups.
	Support fo the "Edit Register Group" action.
	* ICDebugTarget.java
	* IPersistableRegisterGroup.java
	* CRegisterManager.java
	* CDebugTarget.java
	* CRegisterGroup.java

2005-06-07 Mikhail Khodjaiants
	The endianness flag is not chached.
	* CDebugTarget.java

2005-06-06 Mikhail Khodjaiants
	Bug 98594: Unable to set address breakpoints.
	* CBreakpointManager.java

2005-05-24 Mikhail Khodjaiants
	Bug 88558: run-to-line not thread oriented.
	The IRunTo* and IJumpTo* interfaces moved to ICStackFrame.
	* ICDebugTarget.java
	* ICStackFrame.java
	* CDebugTarget.java
	* CStackFrame.java
	* CThread.java

2005-05-20 Mikhail Khodjaiants
	Bug 94139: User-defined register groups.
	Added API and group serialization.
	* ICDTLaunchConfigurationConstants.java
	- ICRegisterManager.java
	* ICDebugTarget.java
	+ IPersistableRegisterGroup.java
	+ IRegisterDescriptor.java
	* CRegisterManager.java
	* InternalDebugCoreMessages.properties
	* CDebugTarget.java
	* CoreModelMessages.properties
	* CRegister.java
	+ CRegisterDescriptor.java
	* CRegisterGroup.java

2005-05-12 Mikhail Khodjaiants